@startuml
!include ../clean.skin

interface MetadataReader
interface RemoteMetadataReader
interface TableMetadataReader
interface ColumnMetadataReader
interface SqlDialect
class AbstractMetadataReader
class BaseRemoteMetadataReader
class BaseTableMetadataReader
class BaseColumnMetadataReader
class PostgreSQLMetadataReader
class PostgreSQLTableMetadataReader
class PostgreSQLColumnMetadataReader
abstract class AbstractSqlDialect
class PostgreSQLSqldialect

AbstractMetadataReader .u.|> MetadataReader
AbstractSqlDialect .u.|> SqlDialect
PostgreSQLSqldialect -u-|> AbstractSqlDialect
BaseRemoteMetadataReader .u.|> RemoteMetadataReader
BaseRemoteMetadataReader -u-|> AbstractMetadataReader
BaseRemoteMetadataReader -r-> BaseTableMetadataReader : <<create>> 
BaseRemoteMetadataReader -r-> BaseColumnMetadataReader : <<create>> 
PostgreSQLMetadataReader -u-|>  BaseRemoteMetadataReader
PostgreSQLMetadataReader -r-> PostgreSQLTableMetadataReader : <<create>>
PostgreSQLMetadataReader -r-> PostgreSQLColumnMetadataReader : <<create>>
AbstractSqlDialect -r-> BaseRemoteMetadataReader : <<create>>
PostgreSQLSqldialect -r-> PostgreSQLMetadataReader : <<create>>
BaseTableMetadataReader -u-|> AbstractMetadataReader
BaseTableMetadataReader .u.|> TableMetadataReader
BaseColumnMetadataReader -u-|> AbstractMetadataReader
BaseColumnMetadataReader .u.|> ColumnMetadataReader 
PostgreSQLTableMetadataReader -u-|> BaseTableMetadataReader
PostgreSQLColumnMetadataReader -u-|> BaseColumnMetadataReader

@enduml